--- a/templates/admin/utilisateurs/_actions.html.twig
+++ b/templates/admin/utilisateurs/_actions.html.twig
@@ -1,15 +1,18 @@
 <a href="{{ path('grr_admin_user_edit', { 'id': utilisateur.id }) }}" role="button"
-   class="btn btn-primary"><i class="far fa-edit"></i> {{ 'form.btn.edit'|trans({}, 'actions') }}</a>
+   class="btn btn-primary"><i class="fas fa-user-edit"></i> {{ 'form.btn.edit'|trans({}, 'actions') }}</a>
+
+<a href="{{ path('grr_user_manager_from_user', { 'user': utilisateur.id }) }}" role="button"
+   class="btn btn-primary"><i class="fas fa-user-shield"></i> {{ 'form.btn.perimission'|trans({}, 'actions') }}</a>
 
 <a href="{{ path('grr_admin_user_password', { 'id': utilisateur.id }) }}" role="button"
-   class="btn btn-primary"><i class="fas fa-key"></i> {{ 'form.btn.password'|trans({}, 'actions') }}</a>
+   class="btn btn-primary"><i class="fas fa-user-secret"></i> {{ 'form.btn.password'|trans({}, 'actions') }}</a>
 
-<a href="{{ path('grr_admin_user_index') }}" class="btn btn-primary" role='button'><i class="fas fa-list"></i>
-    {{ 'back.to.list'|trans({}, 'actions') }}
+<a href="{{ path('grr_admin_user_index') }}" class="btn btn-primary" role='button'>
+ <i class="fas fa-users"></i>   {{ 'back.to.list'|trans({}, 'actions') }}
 </a>
 
 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">
-    <i class="fas fa-trash"></i> {{ 'form.btn.delete'|trans({}, 'actions') }}
+    <i class="fas fa-user-times"></i> {{ 'form.btn.delete'|trans({}, 'actions') }}
 </button>
 <br/>
 <br/>
