--- a/templates/_menu_user.html.twig
+++ b/templates/_menu_user.html.twig
@@ -3,7 +3,7 @@
        aria-expanded="false">{{ app.user.email }}</a>
     <div class="dropdown-menu" aria-labelledby="dropdown01">
         <a class="dropdown-item"
-           href="{{ path('grr_user_show') }}">{{ 'menu.user.profile'|trans() }}</a>
+           href="{{ path('grr_user_show') }}"><i class="fas fa-users-cog"></i> {{ 'menu.user.profile'|trans() }}</a>
         <a href="{{ path('app_logout') }}" class="dropdown-item" title="{{ 'menu.user.logout'|trans }}"><i
                     class="fas fa-sign-out-alt"></i> {{ 'menu.user.logout'|trans() }}</a>
 
