--- a/templates/security/user_manager_resource/new.html.twig
+++ b/templates/security/user_manager_resource/new.html.twig
@@ -1,10 +1,12 @@
-{% extends 'base.html.twig' %}
+{% extends '@grr_admin/layout_admin.html.twig' %}
 
 {% block title %}New UserManagerResource{% endblock %}
 
 {% block body %}
-    <h1>{{ user_manager_resource.area }} {{ user_manager_resource.room }} {{ user_manager_resource.user }}</h1>
-
+    <h1>
+        {{ 'usermanagerresource.new.title'|trans }}
+        {{ user_manager_resource.area }}{# {{ user_manager_resource.room }} {{ user_manager_resource.user }}#}
+    </h1>
     {{ include('security/user_manager_resource/_form.html.twig') }}
 
 
