--- a/templates/admin/utilisateurs/show.html.twig
+++ b/templates/admin/utilisateurs/show.html.twig
@@ -35,5 +35,8 @@
         </tr>
     </table>
 
+    <h3>Droits</h3>
+    {% include 'security/user_manager_resource/_detail_permissions.html.twig' with {'manages': utilisateur.usersManagerResource} %}
+
     {{ include('@grr_admin/utilisateurs/_delete_form.html.twig') }}
 {% endblock %}
