--- a/templates/admin/utilisateurs/_form.html.twig
+++ b/templates/admin/utilisateurs/_form.html.twig
@@ -29,6 +29,19 @@
     </div>
 </div>
 
+<div class="row">
+    <div class="col-6">
+        {% if form.roles is defined %}
+            {{ form_row(form.roles) }}
+        {% endif %}
+    </div>
+    <div class="col-6">
+        {% if form.isEnabled is defined %}
+            {{ form_row(form.isEnabled) }}
+        {% endif %}
+    </div>
+</div>
+
 <button class="btn btn-primary"><i
             class="far fa-save"></i> {{ button_label|default('form.btn.save') | trans({},'actions') }}</button>
 
