--- a/templates/admin/utilisateurs/index.html.twig
+++ b/templates/admin/utilisateurs/index.html.twig
@@ -13,7 +13,7 @@
     <table class="table table-bordered">
         <thead>
         <tr>
-            <th>{{ 'user.profile.email.label'| trans }}</th>
+            <th>{{ 'user.account.email.label'| trans }}</th>
             <th>{{ 'user.form.nom.label'| trans }}</th>
             <th>{{ 'user.form.isEnabled.label'| trans }}</th>
         </tr>
