--- a/templates/front/account/_actions.html.twig
+++ b/templates/front/account/_actions.html.twig
@@ -1,7 +1,7 @@
-<a href="{{ path('grr_user_edit') }}" role="button"
+<a href="{{ path('grr_account_edit') }}" role="button"
    class="btn btn-primary"><i class="far fa-edit"></i> {{ 'form.btn.edit'|trans({}, 'actions') }}</a>
 
-<a href="{{ path('grr_user_edit_password') }}" role="button"
+<a href="{{ path('grr_account_edit_password') }}" role="button"
    class="btn btn-primary"><i class="fas fa-key"></i> {{ 'form.btn.password'|trans({}, 'actions') }}</a>
 
 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">
