--- a/templates/front/account/edit_password.html.twig
+++ b/templates/front/account/edit_password.html.twig
@@ -10,5 +10,5 @@
     <button class="btn btn-primary">{{ button_label|default('form.btn.save') | trans({},'actions') }}</button>
     {{ form_end(form) }}
     <br/>
-    <a href="{{ path('grr_user_show',{'id': user.id}) }}">{{ 'form.btn.cancel'|trans({},'actions') }}</a>
+    <a href="{{ path('grr_account_show') }}">{{ 'form.btn.cancel'|trans({},'actions') }}</a>
 {% endblock %}
