--- a/templates/front/account/_delete_form.html.twig
+++ b/templates/front/account/_delete_form.html.twig
@@ -13,7 +13,7 @@
                 {{ 'user.delete.confirm'|trans({'name': user.email}, 'actions') }}
             </div>
             <div class="modal-footer">
-                <form method="post" action="{{ path('grr_user_delete') }}">
+                <form method="post" action="{{ path('grr_user_account_delete') }}">
                     <input type="hidden" name="_method" value="DELETE">
                     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">{{ 'form.btn.cancel'|trans({}, 'actions') }}</button>
