--- a/templates/front/account/edit.html.twig
+++ b/templates/front/account/edit.html.twig
@@ -5,14 +5,13 @@
 {% block body %}
     <h1>Edit User</h1>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('@grr_front/account/_form.html.twig', {'button_label': 'Update'}) }}
 
     <br/>
-    <a href="{{ path('grr_user_show') }}"><i
+    <a href="{{ path('grr_account_show') }}"><i
                 class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({}, 'actions') }}</a>
 
-    {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
 {% block scripts %}
-    {% include 'user/_select_room_js.html.twig' %}
+    {% include '@grr_front/account/_select_room_js.html.twig' %}
 {% endblock %}
