--- a/templates/search/_entry.html.twig
+++ b/templates/search/_entry.html.twig
@@ -5,6 +5,8 @@
 
     {{ form_widget(form.name) }}
 
+    {{ form_widget(form.area) }}
+
     {{ form_widget(form.room) }}
 
     {{ form_widget(form.entry_type) }}
