--- a/templates/admin/type_entry/edit.html.twig
+++ b/templates/admin/type_entry/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends '@grr_admin/layout_admin.html.twig' %}
 
-{% block title %}{{ type_entry.typeName }}{% endblock %}
+{% block title %}{{ type_entry.name }}{% endblock %}
 
 {% block body %}
-    <h1>{{ type_entry.typeName }}</h1>
+    <h1>{{ type_entry.name }}</h1>
 
     {{ include('@grr_admin/type_entry/_form.html.twig', {'button_label': 'form.btn.update'}) }}
 
