--- a/templates/admin/type_entry/index.html.twig
+++ b/templates/admin/type_entry/index.html.twig
@@ -1,21 +1,21 @@
 {% extends '@grr_admin/layout_admin.html.twig' %}
 
-{% block title %}GrrTypeArea index{% endblock %}
+{% block title %}Type entry index{% endblock %}
 
 {% block body %}
     <h1>{{ 'typeEntry.index.title'| trans }}</h1>
 
     <a class="btn btn-primary" href="{{ path('grr_admin_type_entry_new') }}"><i
-                class="fas fa-plus"></i> {{ 'typeArea.new.title'| trans({}, 'actions') }}</a>
+                class="fas fa-plus"></i> {{ 'typeEntry.new.title'| trans({}, 'actions') }}</a>
     <br/> <br/>
 
     <table class="table">
         <thead>
         <tr>
-            <th>{{ 'typeArea.form.typeName.label'|trans }}</th>
-            <th>{{ 'typeArea.form.orderDisplay.label'|trans }}</th>
-            <th>{{ 'typeArea.form.couleur.label'|trans }}</th>
-            <th>{{ 'typeArea.form.typeLetter.label'|trans }}</th>
+            <th>{{ 'typeEntry.form.typeName.label'|trans }}</th>
+            <th>{{ 'typeEntry.form.orderDisplay.label'|trans }}</th>
+            <th>{{ 'typeEntry.form.couleur.label'|trans }}</th>
+            <th>{{ 'typeEntry.form.typeLetter.label'|trans }}</th>
         </tr>
         </thead>
         <tbody>
@@ -23,12 +23,12 @@
             <tr>
                 <td>
                     <a href="{{ path('grr_admin_type_entry_show', {'id': type_entry.id}) }}">
-                        {{ type_entry.typeName }}
+                        {{ type_entry.name }}
                     </a>
                 </td>
                 <td>{{ type_entry.orderDisplay }}</td>
-                <td style="background-color: {{ type_entry.couleur}}">{{ type_entry.couleur }}</td>
-                <td>{{ type_entry.typeLetter }}</td>
+                <td style="background-color: {{ type_entry.color}}">{{ type_entry.color }}</td>
+                <td>{{ type_entry.letter }}</td>
             </tr>
         {% else %}
             <tr>
