--- a/templates/admin/type_entry/new.html.twig
+++ b/templates/admin/type_entry/new.html.twig
@@ -1,9 +1,9 @@
 {% extends '@grr_admin/layout_admin.html.twig' %}
 
-{% block title %}{{ 'typeArea.new.title'|trans }}{% endblock %}
+{% block title %}{{ 'typeEntry.new.title'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>{{ 'typeArea.new.title'|trans }}</h1>
+    <h1>{{ 'typeEntry.new.title'|trans }}</h1>
 
     {{ include('@grr_admin/type_entry/_form.html.twig') }}
     <br/>
