--- a/templates/admin/type_entry/show.html.twig
+++ b/templates/admin/type_entry/show.html.twig
@@ -1,29 +1,29 @@
 {% extends '@grr_admin/layout_admin.html.twig' %}
 
-{% block title %}{{ type_entry.typeName }}{% endblock %}
+{% block title %}{{ type_entry.name }}{% endblock %}
 
 {% block body %}
 
-    <h1>{{ type_entry.typeName }}</h1>
+    <h1>{{ type_entry.name }}</h1>
 
     {% include '@grr_admin/type_entry/_actions.html.twig' %}
 
     <table class="table table-bordered">
         <tbody>
         <tr>
-            <th>{{ 'typeArea.form.orderDisplay.label'|trans }}</th>
+            <th>{{ 'typeEntry.form.orderDisplay.label'|trans }}</th>
             <td>{{ type_entry.orderDisplay }}</td>
         </tr>
         <tr>
-            <th>{{ 'typeArea.form.couleur.label'|trans }}</th>
-            <td style="background-color: {{ type_entry.couleur }}">{{ type_entry.couleur }}</td>
+            <th>{{ 'typeEntry.form.couleur.label'|trans }}</th>
+            <td style="background-color: {{ type_entry.color }}">{{ type_entry.color }}</td>
         </tr>
         <tr>
-            <th>{{ 'typeArea.form.typeLetter.label'|trans }}</th>
-            <td>{{ type_entry.typeLetter }}</td>
+            <th>{{ 'typeEntry.form.typeLetter.label'|trans }}</th>
+            <td>{{ type_entry.letter }}</td>
         </tr>
         <tr>
-            <th>{{ 'typeArea.form.disponible.label'|trans }}Disponible</th>
+            <th>{{ 'typeEntry.form.disponible.label'|trans }}Disponible</th>
             <td>{{ type_entry.disponible }}</td>
         </tr>
         </tbody>
