--- a/templates/front/entry/show.html.twig
+++ b/templates/front/entry/show.html.twig
@@ -46,7 +46,7 @@
     {{ entry.description|nl2br }}
 
     <p class="text-muted">
-        {{ 'entry.form.createBy.label'|trans }} {{ entry.createBy }}
+        {{ 'entry.form.createBy.label'|trans }} {{ entry.createdBy }}
     </p>
 
     {% include '@grr_front/periodicity/_show.html.twig' %}
