dummy fixtures periodicity

--- a/templates/front/entry/form/_form_periodicity.html.twig
+++ b/templates/front/entry/form/_form_periodicity.html.twig
@@ -9,10 +9,10 @@
         <tbody>
         <tr>
             <td>
-                {{ form_row(form.periodicity.days) }}
+                {{ form_row(form.periodicity.weekDays) }}
             </td>
             <td>
-                {{ form_row(form.periodicity.repeat_week) }}
+                {{ form_row(form.periodicity.weekRepeat) }}
             </td>
         </tr>
         </tbody>
