--- a/templates/admin/setting/index.html.twig
+++ b/templates/admin/setting/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}GrrSetting index{% endblock %}
 
 {% block body %}
-    <h1>GrrSetting index</h1>
+    <h1>{{ 'settings.title'|trans }}</h1>
 
     <table class="table table-bordered">
         <thead>
