--- a/templates/admin/area/_form.html.twig
+++ b/templates/admin/area/_form.html.twig
@@ -6,7 +6,7 @@
         {{ form_row(form.orderDisplay) }}
     </div>
     <div class="col-6">
-        {{ form_row(form.durationTimeSlot) }}
+        {{ form_row(form.timeInterval) }}
         {{ form_row(form.durationDefaultEntry) }}
     </div>
 </div>
