--- a/templates/admin/area/show.html.twig
+++ b/templates/admin/area/show.html.twig
@@ -36,10 +36,10 @@
                 </tr>
                 <tr>
                     <th>
-                        {{ 'area.form.resolutionArea.label'|trans }}<br/>
-                        <span class="text-muted">{{ 'area.form.resolutionArea.help'|trans }}</span>
+                        {{ 'area.form.timeInterval.label'|trans }}<br/>
+                        <span class="text-muted">{{ 'area.form.timeInterval.help'|trans }}</span>
                     </th>
-                    <td>{{ area.durationTimeSlot }}</td>
+                    <td>{{ area.timeInterval }}</td>
                 </tr>
                 <tr>
                     <th>{{ 'area.form.eveningendsMinutesArea.label'|trans }}</th>
