fix room select

--- a/templates/admin/utilisateurs/edit.html.twig
+++ b/templates/admin/utilisateurs/edit.html.twig
@@ -12,5 +12,5 @@
 
 {% endblock %}
 {% block scripts %}
-    {% include 'user/_select_room_js.html.twig' %}
+    {% include '@grr_front/account/_select_room_js.html.twig' %}
 {% endblock %}
