--- a/templates/front/account/_select_room_js.html.twig
+++ b/templates/front/account/_select_room_js.html.twig
@@ -3,8 +3,8 @@
      * Met ajour la liste des rooms
      */
     $(document).ready(function () {
-        var areaSelected = $('#user_edit_area_default');
-        var roomsList = $('#user_edit_room_default');
+        var areaSelected = $('.ajax-select-room');
+        var roomsList = $('.room-select');
 
         areaSelected.on('change', function (e) {
             console.log("coucou");
