--- a/templates/front/entry/index.html.twig
+++ b/templates/front/entry/index.html.twig
@@ -38,3 +38,6 @@
     </table>
 
 {% endblock %}
+{% block scripts %}
+    {% include '@grr_front/account/_select_room_js.html.twig' %}
+{% endblock %}
