--- a/templates/front/account/edit.html.twig
+++ b/templates/front/account/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Edit User</h1>
 
-    {{ include('@grr_front/account/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('@grr_front/account/_form.html.twig', {'button_label': 'form.btn.update'}) }}
 
     <br/>
     <a href="{{ path('grr_account_show') }}"><i
