--- a/templates/front/account/_form.html.twig
+++ b/templates/front/account/_form.html.twig
@@ -1,4 +1,34 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn btn-primary" type="submit">{{ button_label|default('Save') }}</button>
+
+<div class="row">
+    <div class="col-6">
+        {{ form_row(form.name) }}
+    </div>
+    <div class="col-6">
+        {{ form_row(form.first_name) }}
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        {{ form_row(form.email) }}
+    </div>
+    <div class="col-6">
+
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        {{ form_row(form.area_default) }}
+    </div>
+    <div class="col-6">
+        {{ form_row(form.room_default) }}
+    </div>
+</div>
+
+<button class="btn btn-primary"><i
+            class="far fa-save"></i> {{ button_label|default('form.btn.save') | trans({},'actions') }}</button>
+
 {{ form_end(form) }}
+
