--- a/templates/front/account/show.html.twig
+++ b/templates/front/account/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
-    <h1>{{'user.account.title'|trans}}</h1>
+    <h1>{{'user.account.title'|trans}} {{ user.name }} {{ user.firstName }}</h1>
 
     {% include '@grr_front/account/_actions.html.twig' %}
 
