--- a/templates/front/entry/form/_form_periodicity.html.twig
+++ b/templates/front/entry/form/_form_periodicity.html.twig
@@ -1,7 +1,7 @@
 <h3>{{ 'entry.new.periodicity.title'|trans({},'actions') }}</h3>
 <hr/>
 
-{{ form_row(form.periodicity.end_time) }}
+{{ form_row(form.periodicity.endTime) }}
 {{ form_row(form.periodicity.type) }}
 
 <div id="weeks_options" class="{{displayOptionsWeek ? '' : 'd-none'}}">
