--- a/templates/front/day/day.html.twig
+++ b/templates/front/day/day.html.twig
@@ -1,6 +1,6 @@
 {% extends '@grr_front/layout_front.html.twig' %}
 
-{% block title %}{{ day.day }} {{ day.monthName|trans }} {{ day.year }}{% endblock %}
+{% block title %}{{ day.day }} {{ day.monthName }} {{ day.year }}{% endblock %}
 
 {% block body %}
 
