--- a/templates/front/month/month.html.twig
+++ b/templates/front/month/month.html.twig
@@ -1,6 +1,6 @@
 {% extends '@grr_front/layout_front.html.twig' %}
 
-{% block title %}{{ firstDay.monthName|trans|title }} {{ firstDay.year }}{% endblock %}
+{% block title %}{{ firstDay.monthName|title }} {{ firstDay.year }}{% endblock %}
 
 {% block body %}
 
