--- a/templates/front/entry/form/_form.html.twig
+++ b/templates/front/entry/form/_form.html.twig
@@ -11,5 +11,5 @@
 </div>
 
 <button class="btn btn-primary" type="submit" name="submit"><i
-            class="far fa-save"></i> {{ button_label|default('Save') }}</button>
+            class="far fa-save"></i> {{ button_label|default('form.btn.save')|trans({}, 'actions') }}</button>
 {{ form_end(form) }}
