full day checkbox

--- a/templates/front/entry/new.html.twig
+++ b/templates/front/entry/new.html.twig
@@ -13,5 +13,6 @@
 {% endblock %}
 {% block scripts %}
     <script src="{{ asset('js/display_select_days.js') }}"></script>
+    <script src="{{ asset('js/full_day.js') }}"></script>
     {% include '@grr_front/entry/form/_rooms_list_ajax.html.twig' %}
 {% endblock %}
