--- a/templates/front/_menu_front.html.twig
+++ b/templates/front/_menu_front.html.twig
@@ -2,7 +2,7 @@
     <a class="nav-link" href="{{ path('grr_home') }}">{{ 'menu.home'|trans({}, 'actions') }} <span class="sr-only">(current)</span></a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{{ path('grr_front_entry_index') }}">{{ 'menu.entries'|trans({}, 'actions') }}</a>
+    <a class="nav-link" href="{{ path('grr_front_entry_index') }}">{{ 'menu.search'|trans({}, 'actions') }}</a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{{ path('grr_admin_index') }}">{{ 'menu.administration'|trans({}, 'actions') }}</a>
