test periodicity every week

--- a/templates/front/entry/new.html.twig
+++ b/templates/front/entry/new.html.twig
@@ -12,7 +12,7 @@
                 class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({}, 'actions') }}</a>
 {% endblock %}
 {% block scripts %}
-    <script src="{{ asset('js/display_select_days.js') }}"></script>
+    <script src="{{ asset('js/periodicity_options_weeks.js') }}"></script>
     <script src="{{ asset('js/full_day.js') }}"></script>
     {% include '@grr_front/entry/form/_rooms_list_ajax.html.twig' %}
 {% endblock %}
