--- a/templates/front/entry/edit.html.twig
+++ b/templates/front/entry/edit.html.twig
@@ -13,7 +13,7 @@
 
 {% endblock %}
 {% block scripts %}
-    <script src="{{ asset('js/display_select_days.js') }}"></script>
+    <script src="{{ asset('js/periodicity_options_weeks.js') }}"></script>
     <script src="{{ asset('js/full_day.js') }}"></script>
     {% include '@grr_front/entry/form/_rooms_list_ajax.html.twig' %}
 {% endblock %}
