--- a/templates/admin/area/edit.html.twig
+++ b/templates/admin/area/edit.html.twig
@@ -3,9 +3,15 @@
 {% block title %}Edit GrrArea{% endblock %}
 
 {% block body %}
-    <h1>{{ area.name }}</h1>
 
-    {{ include('@grr_admin/area/_form.html.twig', {'button_label': 'form.btn.update'}) }}
+    <div class="card bg-light mb-3">
+        <div class="card-header">
+            <h3>{{ area.name }}</h3>
+        </div>
+        <div class="card-body">
+            {{ include('@grr_admin/area/_form.html.twig', {'button_label': 'form.btn.update'}) }}
+        </div>
+    </div>
 
     <br/>
     <a href="{{ path('grr_admin_area_show',{'id': area.id}) }}"><i
