--- a/templates/security/user_manager_resource/new.html.twig
+++ b/templates/security/user_manager_resource/new.html.twig
@@ -3,12 +3,16 @@
 {% block title %}New UserManagerResource{% endblock %}
 
 {% block body %}
-    <h1>
-        {{ 'usermanagerresource.new.title'|trans }}
-        {{ user_manager_resource.area }}{# {{ user_manager_resource.room }} {{ user_manager_resource.user }}#}
-    </h1>
-    {{ include('security/user_manager_resource/_form.html.twig') }}
+    <div class="card bg-light mb-3">
+        <div class="card-header">
+            <h3>{{ 'usermanagerresource.new.title'|trans }}  {{ user_manager_resource.area }}</h3>
+        </div>
 
+        <div class="card-body">
+            {# {{ user_manager_resource.room }} {{ user_manager_resource.user }}#}
+            {{ include('security/user_manager_resource/_form.html.twig') }}
+        </div>
+    </div>
 {% endblock %}
 
 {% block scripts %}
