--- a/templates/front/entry/form/_form.html.twig
+++ b/templates/front/entry/form/_form.html.twig
@@ -10,6 +10,6 @@
     </div>
 </div>
 
-<button class="btn btn-primary" type="submit" name="submit"><i
-            class="far fa-save"></i> {{ button_label|default('form.btn.save')|trans({}, 'actions') }}</button>
+<button class="btn btn-primary" type="submit"><i class="far fa-save"></i> {{ button_label|default('form.btn.save')|trans({}, 'actions') }}</button>
+
 {{ form_end(form) }}
