--- a/templates/security/authorization_area/show.html.twig
+++ b/templates/security/authorization_area/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends '@grr_admin/layout_admin.html.twig' %}
 
 {% block title %}{{ 'authorization.area.title'|trans }}{% endblock %}
 
@@ -6,12 +6,12 @@
 
     <div class="card bg-light mb-3">
         <div class="card-header">
-            <h3>{{ 'authorization.area.title'|trans }}  {{ area }}</h3>
+            <h3>{{ 'authorization.area.title'|trans() }} {{ area }}</h3>
         </div>
 
         <div class="card-body">
-            {% include 'security/user_authorization_area/_actions.html.twig' %}
-            {% include 'security/user_authorization_area/_detail_permissions.html.twig' %}
+            {% include 'security/authorization_area/_actions.html.twig' %}
+            {% include 'security/authorization_area/_detail_permissions.html.twig' %}
         </div>
     </div>
 
