--- a/templates/admin/user/new.html.twig
+++ b/templates/admin/user/new.html.twig
@@ -3,9 +3,15 @@
 {% block title %}{{ 'user.new.title'|trans({},'actions') }}{% endblock %}
 
 {% block body %}
-    <h1>{{ 'user.new.title'|trans({},'actions') }}</h1>
 
-    {{ include('@grr_admin/utilisateurs/_form.html.twig') }}
+    <div class="card bg-light mb-3">
+        <div class="card-header">
+            <h3>{{ 'user.new.title'|trans({},'actions') }}</h3>
+        </div>
+        <div class="card-body">
+            {{ include('@grr_admin/user/_form.html.twig') }}
+        </div>
+    </div>
 
     <br />
     <a href="{{ path('grr_admin_user_index') }}"><i class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({},'actions') }}</a>
