--- a/templates/security/authorization_area/new.html.twig
+++ b/templates/security/authorization_area/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="card bg-light mb-3">
         <div class="card-header">
-            <h3>{{ 'authorization.area.new.title'|trans }}  {{ authorizationArea.area }}</h3>
+            <h3>{{ 'authorization.area.new.title'|trans }}  {{ authorizationArea.area }} {{ user }}</h3>
         </div>
 
         <div class="card-body">
@@ -13,9 +13,10 @@
             {{ include('security/authorization_area/_form.html.twig') }}
         </div>
     </div>  <br />
+    {#
     <a href="{{ path('grr_authorization_area_show',{'id': authorizationArea.area.id}) }}">
         <i class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({}, 'actions') }}</a>
-
+#}
 {% endblock %}
 
 {% block scripts %}
