--- a/templates/_flash_messages.html.twig
+++ b/templates/_flash_messages.html.twig
@@ -9,7 +9,7 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
 
-                        {{ message|trans }}
+                        {{ message|trans() }}
                     </div>
                 {% endfor %}
             {% endfor %}
