--- a/templates/ajax/_rooms_options.html.twig
+++ b/templates/ajax/_rooms_options.html.twig
@@ -1,4 +1,6 @@
-<option value="">{{ 'entry.form.room.select.placeholder' | trans }}</option>
+{% if required == false %}
+    <option value="">{{ 'entry.form.room.select.placeholder' | trans }}</option>
+{% endif %}
 {% for room in rooms %}
     <option value="{{ room.id }}">{{ room.name }}</option>
 {% endfor %}
