--- a/templates/front/_select_room_js.html.twig
+++ b/templates/front/_select_room_js.html.twig
@@ -9,6 +9,7 @@
         areaSelected.on('change', function (e) {
 
            var isRequired = !!roomsList.prop('required');
+           console.log(isRequired);
 
             $.ajax({
                 url: '{{ path('grr_ajax_getrooms') }}',
